# rssp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  readme.md
.github/workflows/: parity.yml
benches/: bpm_perf.rs  breakdown_perf.rs  duration_perf.rs  hash_perf.rs  metadata_perf.rs  mono_perf.rs  nps_perf.rs  step_counts_perf.rs  tech_counts_perf.rs  throughput_perf.rs
benches/fixtures/: 200000_step_challenge.sm  hash_fixture.ssc  variation.ssc
crates/rssp/: Cargo.toml
crates/rssp-cli/: Cargo.toml
crates/rssp-cli/src/: graph.rs  main.rs
crates/rssp-core/: Cargo.toml
crates/rssp-core/src/: bpm.rs  duration.rs  hash.rs  lib.rs  math.rs  matrix.rs  meta.rs  nps.rs  parse.rs  patterns.rs  stats.rs  step_parity.rs  streams.rs  tech.rs  timing.rs
crates/rssp/benches/: bpm_perf.rs  breakdown_perf.rs  duration_perf.rs  hash_perf.rs  matrix_perf.rs  metadata_perf.rs  nps_perf.rs  step_counts_perf.rs  tech_counts_perf.rs
crates/rssp/benches/fixtures/: bpm_fixture.ssc  watch_yo_step.ssc
crates/rssp/examples/: dump_annotations.rs
crates/rssp/src/: analysis.rs  assets.rs  course.rs  lib.rs  pack.rs  report.rs  simfile.rs
crates/rssp/tests/: all_parity.rs  bpm_parity.rs  breakdown_parity.rs  fast_all_parity.rs  genre_metadata.rs  metadata_parity.rs  note_annotations_parity.rs  nps_parity.rs  rssp_unique_parity.rs  timing_parity.rs
crates/rssp/tests/baselines/itl-online-2026/: README.md
crates/rssp/tests/harness/: README.md  note_annotations_dump.lua
src/: analysis.rs  assets.rs  bpm.rs  course.rs  duration.rs  graph.rs  hash.rs  hashing.rs  lib.rs  main.rs  math.rs  matrix.rs  notes.rs  nps.rs  output.rs  pack.rs  parse.rs  patterns.rs  report.rs  rounding.rs  stats.rs  step_parity.rs  streams.rs  tech.rs  timing.rs  translate.rs
tests/: all_parity.rs  bpm_parity.rs  breakdown_parity.rs  duration_parity.rs  fast_all_parity.rs  hash_parity.rs  metadata_parity.rs  nps_parity.rs  rssp_unique_parity.rs  step_counts_parity.rs  tech_counts_parity.rs  timing_parity.rs
