[package]
name = "rssp"
version = "0.2.183"
edition = "2024"
authors = ["Patrik Nilsson <perfecttaste@pm.me>"]
description = "A high-performance simfile parser for StepMania."
repository = "https://github.com/pnn64/rssp"
license = "MIT"
keywords = ["stepmania", "simfile", "parser", "rust", "rssp"]

[dependencies]
png = "0.18.0"
sha1 = { version = "0.10.6", default-features = false }
serde_json = { version = "1.0.145", features = ["preserve_order"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
md5 = "0.8.0"
libtest-mimic = "0.8.1"
zstd = "0.13.3"
criterion = "0.5"

[[test]]
name = "hash_parity"
path = "tests/hash_parity.rs"
harness = false

[[test]]
name = "bpm_parity"
path = "tests/bpm_parity.rs"
harness = false

[[test]]
name = "metadata_parity"
path = "tests/metadata_parity.rs"
harness = false

[[bench]]
name = "hash_perf"
harness = false

[profile.bench]
debug = true
