[workspace]
members = [
    "crates/rssp-core",
    "crates/rssp",
    "crates/rssp-cli",
]
resolver = "3"

[workspace.dependencies]
rssp-core = { path = "crates/rssp-core", version = "0.4.44" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true
