[package]
name = "rssp-cli"
version = "0.4.14"
edition = "2024"
authors = ["Patrik Nilsson <perfecttaste@pm.me>"]
description = "Command-line tools for rssp."
repository = "https://github.com/pnn64/rssp"
license = "MIT"
keywords = ["stepmania", "simfile", "parser", "rust", "rssp"]

[dependencies]
png = "0.18.0"
rssp = { path = "../rssp", version = "0.4.14" }

[[bin]]
name = "rssp"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

inline_always = "allow"
